Add workshop4-invoker with basic command invocation functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@
 members = [
     "workshop1-nom",
     "workshop2-server-client",
-    "workshop3-macro-gen-packet"
+    "workshop3-macro-gen-packet",
+    "workshop4-invoker"
 ]
